# cmake_study

./: README.md  REEADME.md
cmake_install/: README.md
cmake_install/code_test_01/: CMakeLists.txt  main.cpp
code_01/: CMakeLists.txt  README.md
code_02/: CMakeLists.txt  README.md  fun.cpp
code_03/: README.md
code_03/libfun/: CMakeLists.txt  fun.h
code_03/src/: CMakeLists.txt
code_04/: CMakeLists.txt  README.md  travis.sh
code_04/libfun/: CMakeLists.txt
code_04/src/: CMakeLists.txt
code_05/: CMakeLists.txt  README.md
code_05/libfun/: CMakeLists.txt  fun.cpp  fun.def  fun.h
code_05/src/: CMakeLists.txt  main.cpp
problems/: README.md
problems/pro01/: CMakeLists.txt  main.cpp  travis.sh
problems/pro02/: CMakeLists.txt  test.c  travis.sh
problems/pro02/include/: my_lib.h  my_math.h  my_print.h
problems/pro02/src/: my_math.c  my_print.c
win_cmake/: README.md
win_cmake/dll_code/: CMakeLists.txt  travis.bat  travis.sh
win_cmake/dll_code/libfun/: CMakeLists.txt  fun.def  fun.h
win_cmake/dll_code/src/: CMakeLists.txt
